# Mytronome

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  LICENSE  Mytronome.slnx  README.md  buildDesktopApp.bat  docker-compose.prod.yml  docker-compose.yml  dotnet-tools.json  package-lock.json  package.json  restartDocker.bat  runDesktopApp.bat  runTests.bat  runWebApp.bat  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
desktop/: .gitignore  README.md  android-signing.gradle.kts  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: drive_auth.rs  lib.rs  main.rs
desktop/tauri-plugin-google-drive-auth/: Cargo.toml  README.md  build.rs
metronome-engine/: package.json  tsconfig.json
metronome-engine/src/: audioOutput.ts  index.ts  metronome.ts  types.ts
metronome-engine/test/: metronome.test.ts  mocks.ts  scheduler.test.ts
preset-api/: Dockerfile  GlobalSuppressions.cs  Program.cs  appsettings.json  preset-api.csproj  preset-api.http
preset-api/Auth/: MaxLengthPasswordValidator.cs
preset-api/Data/: PresetDbContext.cs
preset-api/Migrations/: 20260622223055_InitialCreate.Designer.cs  20260622223055_InitialCreate.cs  20260623180202_AddAuthAndOwner.Designer.cs  20260623180202_AddAuthAndOwner.cs  20260627033307_PresetCompositeKey.Designer.cs  20260627033307_PresetCompositeKey.cs  PresetDbContextModelSnapshot.cs
preset-api/Models/: Preset.cs  PresetInput.cs
preset-api/Stores/: EfPresetStore.cs  IPresetStore.cs  InMemoryPresetStore.cs
preset-api/Validation/: PresetValidator.cs
presets/: package.json
presets/src/: index.ts  presets.ts  store.ts  types.ts
presets/test/: presets.test.ts
scripts/: bumpVersion.mjs  deploy-web.mjs  gen-icon.mjs  install-android.mjs
source/Mytronome.Cli/: Mytronome.Cli.csproj
source/Mytronome.Core.Tests/: Mytronome.Core.Tests.csproj
source/Mytronome.Infrastructure/: Mytronome.Infrastructure.csproj
source/Mytronome.api/: Mytronome.api.csproj  Mytronome.api.http
test/PresetApi.Tests/: AuthorizationTests.cs  EfPresetStoreTests.cs  PresetApi.Tests.csproj  PresetEndpointTests.cs  PresetValidatorTests.cs  TestAppFactory.cs
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.prod.conf  package.json  tsconfig.app.json  vite.config.ts
web/public/: privacy.html
web/src/: App.tsx  apiBase.ts  index.css  main.tsx  (+1 more)
(+86 files in other folders)
