[package]
name = "mytronome"
version = "1.0.1"
description = "Mytronome desktop app — Tauri shell around the web client."
authors = ["Tyler Dovall"]
license-file = "LICENSE"
repository = "https://github.com/Dohvahl/Mytronome"
edition = "2021"
rust-version = "1.77.2"
keywords = ["metronome"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mytronome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

# --- Desktop-only Drive OAuth: loopback redirect + PKCE token exchange + system
# browser + the OS credential store. None of this runs on mobile (the native
# Android AuthorizationClient handles auth there), so it's kept out of that
# build entirely. ---
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Authorization-code + PKCE flow and token exchange/refresh. Default features
# pull in the async reqwest client (rustls TLS), so no separate HTTP/OpenSSL dep.
oauth2 = "5"
# The async HTTP client oauth2 hands its token requests to (rustls, no OpenSSL).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Async channel + timeout to bridge the OAuth callback into our async command.
tokio = { version = "1", features = ["sync", "time"] }
# Spins up the temporary localhost server that captures Google's redirect.
tauri-plugin-oauth = "2.0.0"
# Stores the refresh token in the OS credential store. `windows-native` =
# Windows Credential Manager; add `apple-native` / `sync-secret-service` when we
# build for macOS / Linux.
keyring = { version = "3", features = ["windows-native"] }
# Opens the consent page in the user's real browser (Google blocks consent in
# embedded webviews).
open = "5"

# --- Mobile-only: native Google Drive authorization (Android Identity Services
# AuthorizationClient) via our own plugin. Access tokens only — no refresh token,
# nothing stored on device, so no secure-storage dependency is needed. ---
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-google-drive-auth = { path = "../tauri-plugin-google-drive-auth" }
